--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -118,6 +118,7 @@ ul {
 
 img {
   max-width: 100%;
+  max-height: 100%;
 }
 
 section {
@@ -202,7 +203,7 @@ section {
   position: absolute;
   left: 10%;
   bottom: 15%;
-  font-size: 20px;
+  font-size: 17px;
   font-weight: bold;
   color: white;
 }
@@ -210,7 +211,7 @@ section {
 .view-more {
   position: absolute;
   left: 10%;
-  bottom: 12%;
+  bottom: 10%;
 }
 
 .mt-10 {
@@ -293,6 +294,15 @@ section {
   background-color: #379cd6;
   color: white;
   height: 48px;
+  transition: background-color 1s;
+  cursor: pointer;
+}
+
+.sub:hover {
+  color: black;
+  border: #c9c7c7 solid 1px;
+  background-color: white;
+  transition: background-color 0.5s;
 }
 
 .mail-icon,
@@ -318,6 +328,30 @@ section {
 .box-product p {
   font-size: 14px;
   margin-top: 10px;
+}
+
+.box-product img:hover {
+  transform: scale(1.05);
+  max-width: 100%;
+}
+
+.view-more {
+  width: 90px;
+  height: 35px;
+  background-color: white;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+}
+
+.view-more:hover {
+  color: rgb(254, 254, 254);
+  border: white solid 1px;
+  background-color: black;
+
+  transition: background-color 0.5s;
 }
 
 @keyframes turn {
@@ -435,4 +469,75 @@ section {
 .border-radius-gray {
   border: solid 1px #c9c7c7;
   border-radius: 50%;
+}
+
+@keyframes showtop {
+  from {
+    opacity: 0;
+    transform: translate(0, 100px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+.show-to-top {
+  opacity: 0;
+}
+.active .show-to-top {
+  animation: showtop 1s ease-in-out 1 forwards;
+}
+
+.show-to-center {
+  opacity: 0;
+}
+
+@keyframes showcenter {
+  from {
+    opacity: 0;
+    transform: translate(-100px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+.active-2 .show-to-center {
+  animation: showcenter 1s ease-in-out 1 forwards;
+}
+
+.show-to-center-2 {
+  opacity: 0;
+}
+
+@keyframes showcenter2 {
+  from {
+    opacity: 0;
+    transform: translate(100px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+.active-2 .show-to-center-2{
+  animation: showcenter2 1s ease-in-out 1 forwards;
+}
+
+.delay-02 {
+  animation-delay: 0.2s !important;
+}
+.delay-04 {
+  animation-delay: 0.4s !important;
+}
+.delay-06 {
+  animation-delay: 0.6s !important;
+}
+.delay-08 {
+  animation-delay: 0.8s !important;
+}
+.delay-1 {
+  animation-delay: 1s !important;
 }
