--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -40,9 +40,34 @@ body {
   font-size: 20px;
 }
 
+.block {
+  display: block;
+}
+
 .search-box,
 .cart-box {
   font-size: 20px;
+}
+
+.search-box i {
+  cursor: pointer;
+}
+
+.search-input-box {
+  display: none;
+}
+
+.search-input {
+  width: 100%;
+  height: 40px;
+
+  border: #c9c7c7 solid 1px;
+}
+
+.search-icon-inside {
+  right: 20px;
+  font-size: 25px;
+  cursor: pointer;
 }
 
 .cart-box {
@@ -214,6 +239,9 @@ section {
   bottom: 10%;
 }
 
+.cursor {
+  cursor: pointer;
+}
 .mt-10 {
   margin-top: 10px;
 }
@@ -222,6 +250,9 @@ section {
   margin-top: 30px;
 }
 
+.mb-30 {
+  margin-bottom: 30px;
+}
 .p-1 {
   padding: 1;
 }
@@ -522,7 +553,7 @@ section {
   }
 }
 
-.active-2 .show-to-center-2{
+.active-2 .show-to-center-2 {
   animation: showcenter2 1s ease-in-out 1 forwards;
 }
 
@@ -540,4 +571,24 @@ section {
 }
 .delay-1 {
   animation-delay: 1s !important;
+}
+
+.view-now {
+  width: 150px;
+  height: 50px;
+  background-color: #379cd6;
+  font-size: 20px;
+}
+
+.view-now .view-now-link {
+  color: white;
+}
+
+.view-now:hover {
+  background-color: white;
+  transition: background-color 1s;
+}
+
+.view-now:hover .view-now-link {
+  color: black;
 }
