--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -169,6 +169,10 @@ section {
 .ml-10 {
   margin-left: 10px;
 }
+
+.mr-30 {
+  margin-right: 30px;
+}
 .mr-10 {
   margin-right: 10px;
 }
@@ -276,8 +280,6 @@ section {
   position: absolute;
 }
 
-.text-cen
-
 .about-title {
   width: 100%;
   font-size: 30px;
@@ -348,6 +350,7 @@ section {
   background-color: #f5f5f5;
   height: 140px;
   width: 100%;
+  margin-left: 1%;
 }
 
 .bold {
@@ -518,6 +521,10 @@ section {
   opacity: 0;
 }
 .active .show-to-top {
+  animation: showtop 1s ease-in-out 1 forwards;
+}
+
+.active-3 .show-to-top {
   animation: showtop 1s ease-in-out 1 forwards;
 }
 
